# Asupersync-Deterministic-Async-Runtime-Replay-Testing-Infrastructure

./: .gitignore  .rchignore  AGENTS.md  ATP_DOD_CHECKLIST.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SYNC_CONFORMANCE_REPORT.md  TESTING.md  asupersync_plan_v4.md  asupersync_v4_formal_semantics.md  asupersync_web_demo.html  audit_index.jsonl  audit_pending_67t6xn.jsonl  e2e_hardening_10_analysis.md  e2e_hardening_11_analysis.md  e2e_hardening_12_analysis.md  e2e_hardening_13_analysis.md  e2e_hardening_14_analysis.md  e2e_hardening_15_analysis.md  e2e_hardening_7_analysis.md  e2e_hardening_8_analysis.md  e2e_hardening_9_analysis.md  e2e_hardening_summary.md  exact_func.txt  index.html  patch.py  runtime_bugs_pass1.jsonl
.beads/: .gitignore  interactions.jsonl
.github/: ci_matrix_policy.json  no_mock_policy.json  wasm_worker_offload_policy.json
artifacts/: generated_smoke_artifact_inventory_v1.json  raptorq_track_e_gf256_multiscenario_refresh_v2.json  raptorq_track_e_gf256_multiscenario_refresh_v4.json  runtime_control_seam_inventory_v1.json  runtime_workload_corpus_v1.json
asupersync-browser-core/: Cargo.toml
asupersync-macros/: Cargo.toml
asupersync-tokio-compat/: Cargo.toml
asupersync-wasm/: Cargo.toml
benches/: atomic_ordering_bench.rs  bytes_allocation_profile.rs  cancel_drain_bench.rs  cancel_trace_bench.rs  egraph_benchmark.rs  fabric_bench.rs  geodesic_benchmark.rs  gf256_benchmark.rs  gf256_multiply.rs  golden_output.rs  homology_benchmark.rs  lab_iocap_contention.rs  load_balancer_benchmark.rs  memory_ordering_bench.rs  memory_ordering_optimization.rs  methodology_baselines.rs  next_task_hotpath.rs  otlp_queue_contention.rs  otlp_trace_exporter_bench.rs  phase0_baseline.rs  raptorq_benchmark.rs  raptorq_blocked_elimination_bench.rs  raptorq_emission_bench.rs  raptorq_large_k_profile.rs  reactor_benchmark.rs  scheduler_autotuner_bench.rs  scheduler_benchmark.rs  scheduler_browser_bench.rs  semaphore_benchmark.rs  spork_baseline.rs  timer_wheel.rs  trace_recorder_hotpath.rs  virtual_time_wheel_cancel_storm.rs  waker_allocation_profile.rs
conformance/: Cargo.toml  http2_h2spec.md
conformance/.beads/: issues.jsonl
conformance/quic/: README.md
conformance/raptorq_rfc6330/: COVERAGE_BASELINE.md  DISCREPANCIES_CANDIDATES.md  REQUIREMENTS_MATRIX.json  TEST_PRIORITY_MATRIX.md
conformance/raptorq_rfc6330/reporting/docs/: CONFORMANCE_MATRIX.md  MAINTENANCE_PROCEDURES.md
conformance/raptorq_rfc6330/reporting/src/: compliance_report.rs  coverage_matrix.rs  maintenance_workflows.rs  mod.rs  regression_detection.rs
conformance/raptorq_rfc6330/reporting/templates/: report.css
conformance/src/: h1_expect_continue_conformance.rs  h1_request_building_conformance.rs  h1_response_building_conformance.rs  h2_connect_method_conformance.rs  h2_continuation_conformance.rs  h2_data_end_stream_conformance.rs  h2_enable_push_conformance.rs  h2_goaway_conformance.rs  h2_ping_conformance.rs  h2_priority_conformance.rs  h2_settings_conformance.rs  hpack_conformance.rs  hpack_encoder_conformance.rs  kafka_record_batch_v2.rs  lean_frontier.rs  lib.rs  mysql_conformance.rs  otlp_wire_format.rs  raptorq_rfc6330.rs  reference_registry.rs  report.rs  resp3_nested_conformance.rs  rfc6330_fixtures.rs  rfc6330_tests.rs  runner.rs
conformance/src/tests/: cancel_protocol.rs  mod.rs  obligation_no_leak.rs  region_quiescence.rs  structured_concurrency.rs
conformance/tests/: h1_request_building_conformance_exit_codes.rs  raptorq_rfc6330_cli_contract.rs
docs/: CROSS_MODULE_LOCK_ORDERING.md  FABRIC_GUARDRAILS.md  FABRIC_THREAT_MODEL.md  MEMORY_ORDERING_OPTIMIZATION.md  MEMORY_ORDERING_OPTIMIZATION_REPORT.md  NETWORK_TWO_PHASE_MIGRATION.md  THREAT_MODEL.md  WASM.md  adversarial_regime_shift_contract.md  agent_swarm_coordination_collector.md  agent_swarm_coordination_redaction_contract.md  agent_swarm_coordination_workload_contract.md  asupersync_v4_formal_semantics.md  atp-dependency-gates.md  atp_architecture.md  atp_cli_architecture.md  atp_contributor_guide.md  atp_coverage_ledger.md  atp_test_contract.md  authority_flow_audit_contract.md  benchmarking.md  bounded_controller_synthesis_contract.md  cancel_protocol_state_machines.md  capability_token_model_contract.md  channel_supervision_e2e.md  ci_proof_gates_contract.md  claim_evidence_graph_contract.md  conformance_mysql_ssl_gaps.md  controller_sandbox_contract.md  coordination_workload_bridge_signoff.md  coordination_workload_bridge_smoke_runbook.md  crash_only_region_contract.md  cross_track_composition_contract.md  cx_macaroon_obligation_recovery_e2e.md  decision_plane_validation_contract.md  digital_twin_contract.md  distributed_obligation_e2e.md  (+144 more)
fuzz/conformance/: Cargo.toml  README.md
fuzz/conformance/src/: h2_continuation_ordering_conformance.rs  h2_initial_window_size_conformance.rs  h2_ping_rtt_measurement_conformance.rs  h2_rst_stream_error_propagation_conformance.rs  lib.rs
src/: app.rs  (+121 more)
tests/conformance/grpc_connect/: Cargo.toml  README.md
tests/conformance/grpc_connect/src/: client.rs  connect_compat.rs  lib.rs  runner.rs  service.rs  test_cases.rs
tests/conformance/raptorq_differential/: Cargo.toml
tests/conformance/raptorq_differential/src/: differential_tests.rs  fixture_loader.rs  lib.rs  provenance.rs  reference_integration.rs
tests/conformance/raptorq_rfc6330/differential/: Cargo.toml
tests/conformance/raptorq_rfc6330/differential/fixtures/: PROVENANCE.md
tests/conformance/raptorq_rfc6330/differential/src/: fixture_loader.rs  lib.rs  provenance.rs
tests/conformance/raptorq_rfc6330/golden/: Cargo.toml
tests/conformance/raptorq_rfc6330/golden/fixtures/: PROVENANCE.md
tests/conformance/raptorq_rfc6330/golden/src/: fixture_generator.rs  fixture_generator_simple.rs  format_validator.rs  golden_file_manager.rs  golden_file_manager_simple.rs  lib.rs  mod.rs  round_trip_harness.rs
tests/conformance/raptorq_rfc6330/reporting/: Cargo.toml
tests/conformance/raptorq_rfc6330/reporting/src/: compliance_report.rs  coverage_matrix.rs  lib.rs  maintenance_workflows.rs  regression_detection.rs
(+4274 files in other folders)
