[workspace]
members = [
    ".",
    "asupersync-macros",
    "asupersync-browser-core",
    "asupersync-tokio-compat",
    "conformance",
    "franken_kernel",
    "franken_evidence",
    "franken_decision",
    "frankenlab", "drop_unwrap_finder",
]
exclude = ["fuzz", "asupersync-wasm"]

[package]
name = "asupersync"
version = "0.3.2"
edition = "2024"
license-file = "LICENSE"
description = "Spec-first, cancel-correct, capability-secure async runtime for Rust."
repository = "https://github.com/Dicklesworthstone/asupersync"
readme = "README.md"
documentation = "https://docs.rs/asupersync"
keywords = ["async", "structured", "cancellation", "runtime"]
categories = ["asynchronous", "concurrency"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "assets/dashboard.html",
    "src/**",
    "!**/*.out",
]

[features]
default = ["test-internals", "proc-macros"]
# Reserve a dedicated feature name for the native FABRIC lane. The actual
# module wiring still lives in `src/messaging/mod.rs` and is not fully gated
# yet.
messaging-fabric = []
waker-profiling = []
# Explicit opt-in for experimental browser-targeted builds.
# This does not imply full wasm parity; it only enables guarded compilation paths.
wasm-browser-preview = []
# Browser runtime capability slices for wasm profile composition.
wasm-runtime = ["wasm-browser-preview"]
browser-io = []
browser-trace = []
deterministic-mode = []
native-runtime = []
# Canonical wasm browser profiles (FP-BR-* in the wasm build plan).
wasm-browser-dev = ["wasm-runtime", "browser-io"]
wasm-browser-prod = ["wasm-runtime", "browser-io"]
wasm-browser-deterministic = ["wasm-runtime", "deterministic-mode", "browser-trace"]
wasm-browser-minimal = ["wasm-runtime"]
# Enable internal test helpers for integration tests.
# This exposes private APIs like Cx::new() and is NOT for production use.
test-internals = ["dep:tracing", "dep:tracing-subscriber", "dep:visibility"]
# Opt-in compile surface for ignored, environment-gated real-service E2E tests.
real-service-e2e = []
# Focused no-mock obligation cleanup E2E harness for asupersync-9u057b.5.
obligation-cleanup-e2e = []
# OpenTelemetry metrics provider only. The normal dependency graph for this
# feature stays Tokio-free; OTLP protobuf helpers remain fuzz/test-only.
metrics = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
# Enable tracing integration for structured logging and spans.
# When disabled, tracing macros compile to no-ops for zero overhead.
tracing-integration = ["dep:tracing"]
# Enable proc macros for structured concurrency (scope!, spawn!, join!, race!)
proc-macros = ["dep:asupersync-macros"]
# Optional Tower adapter for AsupersyncService.
tower = ["dep:tower"]
# Enable LZ4 compression for trace files.
trace-compression = ["dep:lz4_flex"]
# Enable debug HTTP server for runtime inspection.
debug-server = []
# Enable TOML config file loading for RuntimeBuilder.
config-file = ["dep:toml"]
# Enable lock contention metrics for ContendedMutex (wait/hold time tracking).
# Zero cost when disabled. Used for sharding before/after comparison.
lock-metrics = []
# Enable real-time obligation leak detection with stack traces and region boundary checks.
# Zero cost when disabled. Adds comprehensive tracking and attribution for debugging obligation leaks.
obligation-leak-detection = []
# Enable io_uring reactor for Linux/Android modern async I/O (requires kernel 5.1+).
io-uring = ["dep:io-uring"]
# Enable TLS support via rustls
tls = ["dep:rustls", "dep:rustls-pki-types", "rustls/ring", "dep:ring", "dep:rustls-pemfile", "dep:x509-parser"]
# Enable native root certificates for TLS
tls-native-roots = ["tls", "dep:rustls-native-certs"]
# Enable webpki root certificates for TLS
tls-webpki-roots = ["tls", "dep:webpki-roots"]
# Enable CLI tooling (trace inspection).
cli = ["dep:clap", "dep:time", "trace-compression", "dep:serde_yaml", "dep:chrono", "dep:env_logger", "config-file"]
# Enable SQLite async wrapper with blocking pool integration.
sqlite = ["dep:rusqlite"]
# Enable PostgreSQL async client with wire protocol.
postgres = []
# Enable MySQL async client with wire protocol.
mysql = []
# Native QUIC/HTTP3 rollout surfaces (T4.1).
# These expose Tokio-free native paths for inventory/build/test contracts.
quic = []
http3 = ["quic"]
# Enable ATP Tailscale candidate-provider integration points. This intentionally
# carries no Tailscale crate dependency; callers feed provider output into the
# ATP path model and ATP still runs native QUIC over the selected address.
tailscale-path-provider = []
# Legacy Tokio-backed compatibility wrappers live in the separate
# `asupersync-tokio-compat` crate, not in the core feature graph.
# Enable Kafka client integration via rdkafka.
kafka = ["dep:rdkafka"]
# Enable HTTP response compression (gzip, deflate, Brotli).
compression = ["dep:flate2", "dep:brotli"]
# Enable unsafe AVX2/NEON intrinsics for ~8x GF(256) throughput in RaptorQ.
# When disabled, the safe portable SIMD fallback (std::simd) still provides ~2-3x
# over scalar table lookups. Disable to keep the raptorq module free of unsafe code.
simd-intrinsics = []
# Enable Loom concurrency tests for scheduler verification.
loom-tests = ["dep:loom"]
# Enable Cancel-Correctness Property Oracle for cancellation protocol verification.
cancel-correctness-oracle = []
# Enable stack trace capture for lab oracle violations.
lab-stack-traces = ["dep:backtrace", "dep:rustc-demangle"]
# Enable fuzzing support with arbitrary derive macros and OTLP request helpers.
# This intentionally enables opentelemetry-proto's tonic-generated messages and
# is outside the production no-Tokio guarantee.
fuzz = ["dep:arbitrary", "dep:opentelemetry-proto"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "asupersync"
path = "src/bin/asupersync.rs"
required-features = ["cli"]

[[bin]]
name = "offline_tuner"
path = "src/bin/offline_tuner.rs"
required-features = ["cli", "simd-intrinsics"]

[[bin]]
name = "generate_rfc6330_vectors"
path = "scripts/generate_rfc6330_vectors.rs"

[dependencies]
# Phase 0: prefer std/core; avoid bringing in executors/runtimes.
# Dependencies added here must preserve determinism in the lab runtime.
thiserror = "2.0"
crossbeam-queue = "0.3"
parking_lot = "0.12"
slab = "0.4"
smallvec = "1.15"
pin-project = "1.1"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
memchr = "2.8"
getrandom = "0.4"
hex = "0.4"
# Use maintained bincode-next (crate imported as `bincode`) with serde interop.
bincode = { package = "bincode-next", version = "2.1", features = ["serde"] }
# Optional tracing integration - only compiled when tracing-integration feature is enabled
tracing = { version = "0.1", optional = true }
# Optional tracing subscriber for test-internals feature
tracing-subscriber = { version = "0.3", optional = true }
# Optional OpenTelemetry metrics provider
opentelemetry = { version = "0.31", default-features = false, features = ["metrics", "trace"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["metrics", "trace"], optional = true }
# OTLP protobuf builders used by fuzz/test-only wire-format helpers. The
# gen-tonic-messages feature pulls tonic/tokio transitively and is intentionally
# not part of the metrics feature.
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "trace", "metrics", "logs"], optional = true }
# Optional Tower trait integration
tower = { version = "0.5.3", optional = true }
# Optional proc macros for structured concurrency
asupersync-macros = { version = "0.3.2", path = "asupersync-macros", optional = true }
# FrankenSuite evidence ledger, kernel types, and decision contracts (bd-1e2if.3, bd-1e2if.6)
franken-decision = { version = "0.3.2", path = "franken_decision" }
franken-evidence = { version = "0.3.1", path = "franken_evidence" }
franken-kernel = { version = "0.3.1", path = "franken_kernel" }
# Optional conformance tooling (CLI + reports) - removed to break cyclic dependency
# conformance = { package = "asupersync-conformance", version = "0.3.1", path = "conformance", optional = true }
# Optional LZ4 compression for trace files
lz4_flex = { version = "0.13", optional = true }
# Optional visibility macro for test-internals feature
visibility = { version = "0.1", optional = true }
# Optional arbitrary derive support for fuzzing
arbitrary = { version = "1", features = ["derive"], optional = true }
# Tempfile helper for test-internals and test logging utilities.
tempfile = "3.25"
# TLS support via rustls
rustls = { version = "0.23.39", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pki-types = { version = "1.14.1", optional = true }
# Optional native root certificates
rustls-native-certs = { version = "0.8", optional = true }
# Optional webpki root certificates
webpki-roots = { version = "1.0", optional = true }
# PEM file parsing for TLS certificates
rustls-pemfile = { version = "2.2", optional = true }
# Base64 encoding for WebSocket handshake and certificate pins
base64 = "0.22.1"
# NATS nkey seed parsing and nonce signing
nkeys = "0.4.5"
# SHA-1 hashing for WebSocket Sec-WebSocket-Accept calculation (RFC 6455)
sha1 = "0.11"
# signal-hook moved to [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# X.509 certificate parsing for SPKI extraction
x509-parser = { version = "0.18", optional = true }
# Optional TOML config file support for RuntimeBuilder
toml = { version = "1.0", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
time = { version = ">=0.3", features = ["formatting"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
env_logger = { version = "0.11", optional = true }
# YAML parsing for FrankenLab scenario files (CLI feature)
serde_yaml = { version = "0.9", optional = true }
# SQLite async wrapper - bundled by default for portability
rusqlite = { version = "0.39", features = ["bundled"], optional = true }
# SHA-256 for HMAC-SHA256 (Macaroon caveat chains) and PostgreSQL SCRAM
sha2 = "0.11"
# HMAC for Macaroon capability token verification (bd-2lqyk.2)
hmac = "0.13"
# Constant-time equality for authentication tags.
subtle = "2.6"
# HKDF for QUIC key derivation (RFC 9001)
hkdf = "0.12"
# CRC32 for Kafka RecordBatch v2 format validation (KIP-98)
crc32fast = "1.4"
# QUIC/HTTP3 is intentionally native-only for ATP and the runtime core.
# Do not add an external QUIC/H3 stack dependency here.
# Kafka client integration via rdkafka (optional, requires librdkafka on the system).
rdkafka = { version = "0.39", default-features = false, optional = true }
# Systematic concurrency testing for scheduler (loom-tests feature)
loom = { version = "0.7", optional = true }
# Stack trace capture for lab oracle violations
backtrace = { version = "0.3", optional = true }
# Symbol demangling for readable stack traces
rustc-demangle = { version = "0.1", optional = true }
# Reactor backends use HashMap on multiple platforms.
hashbrown = "0.17"
# Lightweight async helpers used by web handler adapter shims.
futures-lite = "2.6"
# Optional gzip/deflate compression via pure-Rust miniz_oxide backend.
flate2 = { version = "1.1", optional = true }
# Optional Brotli compression for HTTP response bodies.
brotli = { version = "8.0", optional = true }
crossbeam-deque = "0.8.6"
prost = "0.14"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
io-uring = { version = "0.7", optional = true }

# Win32 primitives for the signal-poller shutdown event
# (br-asupersync-rsq3qj). CreateEventW + WaitForMultipleObjects + SetEvent
# replace the previous park_timeout-based shutdown of
# `asupersync-signal-poll-win` with sub-ms latency on signal delivery
# and proper kernel-event-driven wakeup on runtime drop.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# wasm32 browser builds require JS-backed entropy wiring for getrandom.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "BroadcastChannel",
    "DomException",
    "Event",
    "EventTarget",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "MessageChannel",
    "MessagePort",
    "MessageEvent",
    "Window",
    "Storage",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WorkerGlobalScope",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }

# Native-only dependencies: platform I/O, sockets, signals, and crypto.
# These are excluded from wasm32 browser builds (umelq.3.3).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
faa_array_queue = "0.1.2"
polling = "3.11"
socket2 = { version = "0.6", features = ["all"] }
libc = "0.2"
nix = { version = "0.31", features = ["fs", "poll", "socket", "uio", "user"] }
signal-hook = "0.4"
# Rustls crypto provider - ring is the most widely used
ring = { version = "0.17", optional = true }

[dev-dependencies]
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
conformance = { package = "asupersync-conformance", version = "0.3.1", path = "conformance", default-features = false }
tempfile = "3.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["metrics", "testing"] }
# Dev-only OTLP wire fixtures use tonic-generated protobuf messages; this edge
# is scoped to tests/fuzzing and not to the default or metrics production graph.
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "trace", "metrics", "logs"] }
lz4_flex = "0.13"
toml = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Certificate generation for TLS/QUIC tests
rcgen = "0.14"
rayon = "1.12"
serde_yaml = "0.9"
flate2 = "1.1"
# Golden snapshot testing for encoded blocks and artifacts
insta = { version = "1.40", features = ["json", "yaml"] }
# Lightweight deterministic RNG for randomized test harnesses
fastrand = "2.3"
# HTTP/1.1 reference implementation for conformance testing
httparse = "1.8"
# tokio-util for differential conformance testing of LengthDelimitedCodec
tokio-util = { version = "0.7", features = ["codec"] }
# sqlx MySQL reference implementation for binary-protocol differential tests
sqlx = { version = "0.8.6", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
# redis-rs for differential conformance testing of RESP3 push dispatch
redis = "0.26"
# External RFC 6330 decoder for byte-level RaptorQ interoperability checks
raptorq = "1.7.0"
# Tokio for differential semaphore fairness conformance testing
tokio = { version = "1.0", features = ["rt", "sync", "time"] }

[[test]]
name = "kafka_real_broker"
path = "tests/integration/kafka_real_broker.rs"

[[test]]
name = "lock_contention_atlas_contract"
path = "tests/lock_contention_atlas_contract.rs"

[[test]]
name = "timer_wheel_advance_invariants"
path = "tests/metamorphic/timer_wheel_advance_invariants.rs"

[[bench]]
name = "phase0_baseline"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "lab_iocap_contention"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "timer_wheel"
harness = false

[[bench]]
name = "reactor_benchmark"
harness = false

[[bench]]
name = "protocol_benchmark"
harness = false

[[bench]]
name = "tracing_overhead"
harness = false

[[bench]]
name = "scheduler_benchmark"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "cancel_trace_bench"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "raptorq_benchmark"
harness = false

[[bench]]
name = "gf256_multiply"
harness = false

[[bench]]
name = "raptorq_emission_bench"
harness = false

[[bench]]
name = "egraph_benchmark"
harness = false

[[bench]]
name = "cancel_drain_bench"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "geodesic_benchmark"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "homology_benchmark"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "golden_output"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "spork_baseline"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "methodology_baselines"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "load_balancer_benchmark"
harness = false

[[bench]]
name = "semaphore_benchmark"
harness = false

[[bench]]
name = "fabric_bench"
harness = false
required-features = ["messaging-fabric", "test-internals"]

[[bench]]
name = "bytes_allocation_profile"
harness = false
required-features = ["messaging-fabric", "test-internals"]

[[bench]]
name = "scheduler_browser_bench"
harness = false
required-features = ["test-internals"]

[[bench]]
name = "otlp_trace_exporter_bench"
harness = false
required-features = ["test-internals"]

[[example]]
name = "spork_minimal_supervised_app"
required-features = ["test-internals"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = false

[lints.rust]
# Default to deny for unsafe code - specific modules that require it can use #[allow(unsafe_code)]
# The epoll reactor requires unsafe for the polling crate's FFI operations
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(fuzzing)', 'cfg(feature, values("quic", "http3", "wasm-browser-preview", "simd-intrinsics", "messaging-fabric", "obligation-cleanup-e2e"))'] }
unsafe_code = "deny"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }
# Proptest's prop_compose! expands doc comments on items the rust compiler can't
# attach docs to; downgrade so test suites using proptest compile under -D warnings.
unused_doc_comments = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Phase 0: Allow documentation and const lints for stubs
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
# Phase 0: Allow module naming patterns
module_inception = "allow"
# Phase 0: Allow doc formatting patterns (math notation)
doc_markdown = "allow"
# Phase 0: Allow casts (arena is bounded at 2^32)
cast_possible_truncation = "allow"
# Many Duration::from_millis(1000) patterns are intentionally explicit about units
duration_suboptimal_units = "allow"
# Rust 2024 migration: postpone broad style-only rewrites from let-chain opportunities.
collapsible_if = "allow"
# WIP-module pedantic/nursery lints that are predominantly style issues in the
# epoch_gc, resource_monitor, cancellation_*, and channel verification harnesses.
# Not correctness concerns — just accumulated style debt during rapid design
# iteration. Downgraded to allow at the workspace level so `cargo clippy
# --all-targets -- -D warnings` passes while individual cleanup lands.
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
uninlined_format_args = "allow"
match_same_arms = "allow"
format_push_string = "allow"
float_cmp = "allow"
items_after_statements = "allow"
items_after_test_module = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
unused_async = "allow"
unused_self = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
missing_fields_in_debug = "allow"
single_match = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
default_trait_access = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
match_like_matches_macro = "allow"
unnecessary_wraps = "allow"
unnecessary_sort_by = "allow"
wrong_self_convention = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
or_fun_call = "allow"
suboptimal_flops = "allow"
no_effect_underscore_binding = "allow"
used_underscore_binding = "allow"
similar_names = "allow"
result_large_err = "allow"
useless_vec = "allow"
format_collect = "allow"
unit_arg = "allow"
field_reassign_with_default = "allow"
assertions_on_constants = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
len_zero = "allow"
large_enum_variant = "allow"
match_wild_err_arm = "allow"
branches_sharing_code = "allow"
read_zero_byte_vec = "allow"
unused_peekable = "allow"
collection_is_never_read = "allow"
manual_checked_ops = "allow"
arithmetic_side_effects = "allow"
must_use_unit = "allow"
needless_pass_by_ref_mut = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_field_names = "allow"
bool_assert_comparison = "allow"
use_self = "allow"
redundant_else = "allow"
derive_partial_eq_without_eq = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
if_not_else = "allow"
unnecessary_debug_formatting = "allow"
inefficient_to_string = "allow"
explicit_iter_loop = "allow"
explicit_into_iter_loop = "allow"
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
cognitive_complexity = "allow"
missing_inline_in_public_items = "allow"
option_option = "allow"
large_futures = "allow"
ignored_unit_patterns = "allow"
redundant_pattern_matching = "allow"
manual_let_else = "allow"
struct_field_names = "allow"
