[package]
name = "asupersync-conformance"
version = "0.3.1"
edition = "2024"
autobins = false
# Keep target-specific CLI contract tests inside the binary targets that own
# them. A package-level integration test currently forces every conformance bin
# to compile, including unrelated experimental OTLP/trace bins.
autotests = false
description = "Conformance test suite for async runtime specifications"
license-file = "../LICENSE"
repository = "https://github.com/Dicklesworthstone/asupersync"
readme = "README.md"
keywords = ["async", "conformance", "runtime", "testing"]
categories = ["asynchronous", "development-tools::testing"]

[[bin]]
name = "conformance_reference_registry_guard"
path = "src/bin/conformance_reference_registry_guard.rs"

[[bin]]
name = "raptorq_rfc6330_conformance"
path = "src/bin/raptorq_rfc6330_conformance.rs"

[[bin]]
name = "quic_migration_rfc9000"
path = "src/bin/quic_migration_rfc9000.rs"

[[bin]]
name = "generate_compliance_report"
path = "raptorq_rfc6330/reporting/bin/generate_compliance_report.rs"

[[bin]]
name = "check_conformance_regression"
path = "raptorq_rfc6330/reporting/bin/check_conformance_regression.rs"

[[bin]]
name = "maintain_fixtures"
path = "raptorq_rfc6330/reporting/bin/maintain_fixtures.rs"

[[bin]]
name = "mysql_conformance_runner"
path = "src/bin/mysql_conformance_runner.rs"

[[bin]]
name = "h1_request_building_conformance"
path = "src/bin/h1_request_building_conformance.rs"

[[test]]
name = "h1_request_building_conformance_exit_codes"
path = "tests/h1_request_building_conformance_exit_codes.rs"

[[bin]]
name = "h1_response_building_conformance"
path = "src/bin/h1_response_building_conformance.rs"

[[bin]]
name = "h2_continuation_conformance"
path = "src/bin/h2_continuation_conformance.rs"

[[bin]]
name = "h2_data_end_stream_conformance"
path = "src/bin/h2_data_end_stream_conformance.rs"

[[bin]]
name = "h2_goaway_conformance"
path = "src/bin/h2_goaway_conformance.rs"

[[bin]]
name = "h2_ping_conformance"
path = "src/bin/h2_ping_conformance.rs"

[[bin]]
name = "h2_priority_conformance"
path = "src/bin/h2_priority_conformance.rs"

[[bin]]
name = "h2_settings_conformance"
path = "src/bin/h2_settings_conformance.rs"

[[bin]]
name = "h2_enable_push_conformance"
path = "src/bin/h2_enable_push_conformance.rs"

[[bin]]
name = "h2_connect_method_conformance"
path = "src/bin/h2_connect_method_conformance.rs"

[[bin]]
name = "hpack_conformance"
path = "src/bin/hpack_conformance.rs"

[[bin]]
name = "hpack_encoder_conformance"
path = "src/bin/hpack_encoder_conformance.rs"

[[bin]]
name = "prometheus_conformance"
path = "src/bin/prometheus_conformance.rs"

[[bin]]
name = "otel_resource_conformance"
path = "src/bin/otel_resource_conformance.rs"

[[bin]]
name = "trace_context_conformance"
path = "src/bin/trace_context_conformance.rs"

[[bin]]
name = "metric_aggregator_conformance"
path = "src/bin/metric_aggregator_conformance.rs"

[[bin]]
name = "cross_process_trace_conformance"
path = "src/bin/cross_process_trace_conformance.rs"

[[bin]]
name = "prometheus_histogram_conformance"
path = "src/bin/prometheus_histogram_conformance.rs"

[[bin]]
name = "otlp_span_attributes_conformance"
path = "src/bin/otlp_span_attributes_conformance.rs"

[[bin]]
name = "otel_sum_aggregator_conformance"
path = "src/bin/otel_sum_aggregator_conformance.rs"

[[bin]]
name = "otel_histogram_aggregator_conformance"
path = "src/bin/otel_histogram_aggregator_conformance.rs"

[[bin]]
name = "otel_logs_exporter_conformance"
path = "src/bin/otel_logs_exporter_conformance.rs"

[[bin]]
name = "otel_span_status_conformance"
path = "src/bin/otel_span_status_conformance.rs"

[[bin]]
name = "otel_trace_context_propagation_conformance"
path = "src/bin/otel_trace_context_propagation_conformance.rs"

[[bin]]
name = "otel_baggage_propagation_conformance"
path = "src/bin/otel_baggage_propagation_conformance.rs"

[[bin]]
name = "otel_exponential_histogram_conformance"
path = "src/bin/otel_exponential_histogram_conformance.rs"

[[bin]]
name = "otel_resource_detection_conformance"
path = "src/bin/otel_resource_detection_conformance.rs"

[[bin]]
name = "otel_span_event_timestamps_conformance"
path = "src/bin/otel_span_event_timestamps_conformance.rs"

[[bin]]
name = "otel_logs_severity_range_conformance"
path = "src/bin/otel_logs_severity_range_conformance.rs"

[[bin]]
name = "otel_metric_exporter_batching_conformance"
path = "src/bin/otel_metric_exporter_batching_conformance.rs"

[[bin]]
name = "h1_expect_continue_conformance"
path = "src/bin/h1_expect_continue_conformance.rs"
[dependencies]
asupersync = { path = "..", features = ["metrics", "test-internals", "tracing-integration", "fuzz"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
tokio = { version = "1.0", features = ["time", "net", "sync", "macros", "rt-multi-thread"] }
env_logger = "0.10"
h2 = "0.4"
bytes = "1.11"
uuid = { version = "1.0", features = ["v4"] }
hyper = { version = "0.14", features = ["client", "http1"] }
urlencoding = "2.1"
prometheus-client = "0.23"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics", "testing"] }
opentelemetry-proto = "0.31"
prost = "0.14"

[dev-dependencies]
# Runtimes can be added here for testing
opentelemetry-proto = "0.31"
prost = "0.14"
redis = "0.26"
# h2 reference implementation for HTTP/2 SETTINGS conformance testing
h2 = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.11"

[[bin]]
name = "otel_trace_id_randomness_conformance"
path = "src/bin/otel_trace_id_randomness_conformance.rs"

[[bin]]
name = "otel_span_id_randomness_conformance"
path = "src/bin/otel_span_id_randomness_conformance.rs"

[[bin]]
name = "otel_histogram_record_conformance"
path = "src/bin/otel_histogram_record_conformance.rs"
