[workspace]

[package]
name = "raptorq-golden-testing"
version = "0.1.0"
edition = "2021"
description = "Golden file testing framework for RaptorQ RFC 6330 conformance"
authors = ["Asupersync Team"]

[[bin]]
name = "generate_goldens"
path = "bin/generate_goldens.rs"

[[bin]]
name = "validate_round_trips"
path = "bin/validate_round_trips.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
# Real RaptorQ implementation under conformance test (br-2puta6).
asupersync = { path = "../../../..", default-features = false, features = ["proc-macros", "test-internals"] }

[dev-dependencies]
tempfile = "3.0"